--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - uses: actions/labeler@v3
         with:
-          configuration-path: .github/labeler.yml
+#          configuration-path: .github/labeler.yml
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
