--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,15 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+lerna-debug.log
+
+# Yarn v3
+.yarn/*
+.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+.yarn/versions
