--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "publish:release": "lerna publish --force-publish",
     "publish:alpha": "lerna publish --force-publish --canary",
-    "postpublish": "yarn workspaces foreach --verbose run my-extra-publish"
+    "postpublish": "yarn workspaces foreach --verbose run extra-publish"
   },
   "devDependencies": {
     "lerna": "6.5.1"
