--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "version": "1.0.1",
+  "version": "1.0.1-alpha.7bbf5f5",
   "exact": true,
   "changelog": false,
   "private": false,
