--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "publish:release": "lerna publish --force-publish",
-    "publish:alpha": "lerna publish --force-publish --canary",
-    "postpublish": "yarn workspaces foreach --verbose run extra-publish"
+    "publish:dev": "lerna publish --force-publish --canary --dist-tag dev --preid $(git rev-parse --short HEAD)",
+    "extra-publish": "yarn workspaces foreach --verbose run postpack"
   },
   "devDependencies": {
     "lerna": "6.5.1"
